tests/baselines/reference/asyncClass_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncClass_es5.ts(1,1): error TS1042: 'async' modifier cannot be used here.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncClass_es5.ts (1 errors) ====
    async class C {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
    }